<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultiesActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/head">

    </View>

    <com.skydoves.elasticviews.ElasticImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Faculties"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/technology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardUseCompatPadding="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tectext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Technology"
                        android:onClick="onclick"
                        android:textColor="@color/dark"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/tecdropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:onClick="onclick"
                        android:visibility="gone">

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/tecfac" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/techfac"
                            android:textColor="@color/dark"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/agriculture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onclick"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/agritext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Agriculture"
                        android:onClick="onclick"
                        android:textColor="@color/dark"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/agridropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:onClick="onclick"
                        android:visibility="gone">

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/agrifac" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/agri_about"
                            android:textColor="@color/dark"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/applied"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onclick"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/appsctext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onclick"
                        android:text="Applied Science"
                        android:textColor="@color/dark"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/appscdropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:onClick="onclick"
                        android:visibility="gone">

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            app:srcCompat="@drawable/appdac" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/about"
                            android:textColor="@color/dark"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="onclick"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mngtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onclick"
                        android:text="Management Studies"
                        android:textColor="@color/dark"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/mngdropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onclick"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            app:srcCompat="@drawable/mngfac" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/mng_about"
                            android:textColor="@color/dark"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/medical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="onclick"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/medtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onclick"
                        android:text="Medical and Allied Sciences "
                        android:textColor="@color/dark"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/meddropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:onClick="onclick"
                        android:visibility="gone">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            app:srcCompat="@drawable/medfac" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/med_about"
                            android:textColor="@color/dark"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardUseCompatPadding="true"
                android:onClick="onclick"
                app:contentPadding="10dp"
                >
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/soctext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onclick"
                        android:text="Social Science and Humanities"
                        android:textColor="@color/dark"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:id="@+id/socdropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:onClick="onclick"
                        android:orientation="vertical">

                        <ImageView

                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            app:srcCompat="@drawable/sshfac" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:textSize="18dp"
                            android:textColor="@color/dark"
                            android:text="@string/ssh_about" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>







        </LinearLayout>

    </ScrollView>

</RelativeLayout>